# timeverse-command-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: USAGE.md  claude_desktop_config.dev.example.json  claude_desktop_config.example.json  claude_desktop_config.python_api.example.json  claude_desktop_config.uvx.example.json
src/timeverse_command/: __init__.py  executor.py  server.py
tests/: test_executor.py  test_server.py
