[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timeverse-command-mcp"
version = "0.1.0"
description = "MCP server for executing shell, Python, and Node.js commands locally"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "TimeVerse Studio" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "shell",
    "command-execution",
    "ai",
    "claude",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
# 安装后会产生一个 `timeverse-command-mcp` 可执行命令
# MCP 客户端（如 Claude Desktop）通过此命令拉起 Server
timeverse-command-mcp = "timeverse_command.server:main"

[project.urls]
Homepage = "https://github.com/timeverse/timeverse-command-mcp"
Documentation = "https://github.com/timeverse/timeverse-command-mcp/blob/main/docs/USAGE.md"
Issues = "https://github.com/timeverse/timeverse-command-mcp/issues"

# ==================== Hatch 构建配置 ====================

[tool.hatch.build.targets.wheel]
packages = ["src/timeverse_command"]

[tool.hatch.build.targets.sdist]
include = [
    "src/timeverse_command",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

# ==================== 工具配置 ====================

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
